Arreglado pequeños errores del login controller

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -16,6 +16,8 @@ eventname.event_not_available=Event not available
 error.fields=You have to complete all the fields.
 error.host=Can't connect with host.
 error.login=Wrong Username or password.
+error.userdata=Error when recovering user data.
+error.malformedurl=Badly formed URL. Did you add http(s) protocol?
 
 label.welcome=Welcome,
 label.selectcourse=Please, select a course:
