--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -13,7 +13,8 @@ btn.clear=Borrar
 error.fields=Debes completar todos los campos.
 error.host=No se ha podido conectar con el host.
 error.login=Usuario y/o contraseña incorrectos.
-
+error.userdata=Error al recuperar los datos del usuario.
+error.malformedurl=URL mal formada. ¿Has añadido protocolo http(s)?
 label.welcome=Bienvenida/o,
 label.selectcourse=Por favor, seleccione un curso:
 title.passwordChanged=Contraseña modificada
