Actualizado el anexo

--- a/latex/anexos.tex
+++ b/latex/anexos.tex
@@ -8,7 +8,7 @@
 \usepackage{lmodern} % scalable font
 \usepackage{microtype}
 \usepackage{placeins}
-
+\usepackage{eurosym}
 \usepackage[backend=bibtex,dateabbrev=false]{biblatex}
 \addbibresource{bibliografiaAnexos.bib}
 
