--- a/latex/bibliografia.bib
+++ b/latex/bibliografia.bib
@@ -318,3 +318,10 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	language = {en},
 	urldate = {2019-06-21}
 }
+
+
+@misc{noauthor_font_nodate,
+	title = {Font {Awesome}},
+	url = {https://fontawesome.com/},
+	urldate = {2019-06-23}
+}
