--- a/latex/bibliografiaAnexos.bib
+++ b/latex/bibliografiaAnexos.bib
@@ -30,3 +30,37 @@
 	url = {https://www.schneier.com/academic/blowfish/},
 	urldate = {2019-06-18}
 }
+
+@misc{noauthor_salarios_2019,
+	title = {Salarios para empleos de {Programador}/a junior en {España} {\textbar} {Indeed}.es},
+	url = {https://www.indeed.es/salaries/Programador/a-junior-Salaries?period=yearly},
+	urldate = {2019-06-23},
+	month = jun,
+	year = {2019}
+}
+
+
+@misc{pais_calculadora_nodate,
+	title = {Calculadora sueldo neto},
+	url = {https://cincodias.elpais.com/herramientas/calculadora-sueldo-neto/},
+	abstract = {Calculadora de sueldo neto actualizada con los últimos cambios fiscales. Obtén al instante tu salario neto en función de tu situación laboral y familiar con Cinco Días en EL PAÍS Economía.},
+	language = {es},
+	urldate = {2019-06-23},
+	journal = {EL PAÍS},
+	author = {País, Ediciones El}
+}
+
+
+@misc{noauthor_frequently_nodate,
+	title = {Frequently {Asked} {Questions} {\textbar} {Charts}},
+	url = {https://developers.google.com/chart/interactive/faq?csw=1#offline},
+	language = {en},
+	urldate = {2019-06-23},
+	journal = {Google Developers}
+}
+
+@misc{noauthor_font_nodate,
+	title = {Font {Awesome}},
+	url = {https://fontawesome.com/},
+	urldate = {2019-06-23}
+}
