--- a/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -145,7 +145,10 @@ color-hash \cite{zeng_generate_2019} es una librería que permite generar colore
 \href{https://html2canvas.hertzen.com/}{html2canvas}
 Realiza capturas de pantalla en una página web con JavaScript.
 
+\section{Paquete de iconos Font Awesome}
 
+Paquete de iconos \cite{noauthor_font_nodate} \textit{open source} que también se emplea en Moodle. 
+Usado para mostrar los componetes de los registros que no existen iconos en Moodle.
 
 \section{Sonarqube y Codacy}
 
