--- a/latex/tex/D_Manual_programador.tex
+++ b/latex/tex/D_Manual_programador.tex
@@ -4,7 +4,7 @@
 
 \section{Estructura de directorios}
 
-\section{Manual del programador}
+\section{Manual del programador} \label{sec:manual_programdor}
 
 \section{Compilación, instalación y ejecución del proyecto}
 
