Corregido errata en la traduccion

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -127,7 +127,7 @@ module.url=URL
 module.wiki=Wiki
 module.workshop=Workshop
 module.category=Category
-module.manul=Manual item
+module.manual=Manual item
 
 
 component.activity_report=Activity report
