--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -125,7 +125,7 @@ module.url=URL
 module.wiki=Wiki
 module.workshop=Taller
 module.category=Categoría
-module.manul=Ítem manual
+module.manual=Ítem manual
 
 
 
