Creado el manual de usuario y parcialmente el manual del programador

--- a/latex/bibliografiaAnexos.bib
+++ b/latex/bibliografiaAnexos.bib
@@ -64,3 +64,11 @@
 	url = {https://fontawesome.com/},
 	urldate = {2019-06-23}
 }
+
+
+@misc{noauthor_project_nodate,
+	title = {Project {Jupyter}},
+	url = {https://www.jupyter.org},
+	abstract = {The Jupyter Notebook is a web-based interactive computing platform. The notebook combines live code, equations, narrative text, visualizations, interactive dashboards and other media.},
+	urldate = {2019-06-25}
+}
